--- a/app.json
+++ b/app.json
@@ -1,13 +1,13 @@
 {
-  "name": "YouTube Downloader Bot",
+  "name": "Mourya Youtube",
   "description": "A telegram bot To Download Youtube Files ",
   "logo": "https://telegra.ph/file/6a3b1febade2313dd0dca.jpg",
   "keywords": [
     "Youtube","YoutubeDownloader"
   ],
-  "repository": "https://github.com/aryanvikash/Youtube-Downloader-Bot",
+  "repository": "https://github.com/mouryachandra53/mourya-youtube",
   "success_url": "https://t.me/youtubdlbot",
-  "website": "https://github.com/aryanvikash/Youtube-Downloader-Bot",
+  "website": "https://github.com/mouryachandra53/mourya-youtube",
   "env": {
         "API_ID": {"description": "Get this value from https://my.telegram.org", "required": true},
         "API_HASH": {"description": "Get this value from https://my.telegram.org" , "required": true},
